practica/deploy-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mariadb
    labels:
        app: mariadb
        tier: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mariadb
            tier: backend
    template:
        metadata:
            labels:
                app: mariadb
                tier: backend
        spec:
            containers:
                - name: contenedor-mariadb
                  image: mariadb
                  ports:
                      - name: mariadb
                        containerPort: 3306
                  volumeMounts:
                      - mountPath: /var/lib/mysql
                        name: volumen-mariadb
            volumes:
                - name: volumen-mariadb
                  persistentVolumeClaim:
                    claimName: pvc-mariadb
