practica/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: django
spec:
    rules:
    - host: www.biblio-jairo.org
      http:
          paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                    name: django
                    port:
                        number: 80
